// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@roots/bud-server has an available middleware 1`] = `
Object {
  "cookie": [Function],
  "dev": [Function],
  "hot": [Function],
  "proxy": [Function],
}
`;

exports[`@roots/bud-server has an enabled middleware 1`] = `
Object {
  "dev": [Function],
  "hot": [Function],
}
`;

exports[`@roots/bud-server in development has expected defaults 1`] = `"http://0.0.0.0:3000/"`;

exports[`@roots/bud-server in development has expected defaults 2`] = `undefined`;

exports[`@roots/bud-server in development has expected defaults 3`] = `undefined`;

exports[`@roots/bud-server in development has expected defaults 4`] = `undefined`;
